--- a/src/html/include/form.njk
+++ b/src/html/include/form.njk
@@ -3,8 +3,10 @@
 <label for="input_{{ id }}">{{ label }}</label>
 {% endif %}
 <div class="input_wrapper">
-    <input id="input_{{ id }}" type="{{ type }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %} {% if maxlength %}maxlength="{{ maxlength }}"{% endif %} >
+    <input id="input_{{ id }}" type="{{ type }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %} {% if maxlength %}data-maxlength="{{ maxlength }}"{% endif %}>
+    {% if type == 'text' %}
     <span id="char_limit_{{ id }}" class="char_limit">-85</span>
+    {% endif %}
 </div>
 {% endmacro %}
 
