--- a/src/html/include/form.njk
+++ b/src/html/include/form.njk
@@ -5,7 +5,7 @@
 {% if type == 'text' %}<div class="input_wrapper">{% endif %}
     <input id="input_{{ id }}" type="{{ type }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %} {% if maxlength %}data-maxlength="{{ maxlength }}"{% endif %}>
     {% if type == 'text' %}
-    <span id="char_limit_{{ id }}" class="char_limit">-85</span>
+    <span id="input_{{ id }}_char_limit" class="char_limit">-85</span>
     {% endif %}
 {% if type == 'text' %}</div>{% endif %}
 {% endmacro %}
@@ -14,10 +14,12 @@
 {% if label %}
 <label for="input_{{ id }}">{{ label }}</label>
 {% endif %}
-<div class="input_wrapper">
+{% if type == 'text' %}<div class="input_wrapper">{% endif %}
     <textarea id="input_{{ id }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %}></textarea>
-    <span id="char_limit_{{ id }}" class="char_limit">-85</span>
-</div>
+    {% if type == 'text' %}
+    <span id="input_{{ id }}_char_limit" class="char_limit">-85</span>
+    {% endif %}
+{% if type == 'text' %}</div>{% endif %}
 {% endmacro %}
 
 {% set sep = '<div class="separator"></div>' | safe %}
