Add char limit label

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -54,7 +54,10 @@ form {
         border: none;
         color: #fff;
         min-height: 1rem;
-
+        &[type="color"] {
+            margin-bottom: 18px;
+            margin-top: 5px;
+        }
         :placeholder {
             color: rgb(182, 182, 182);
         }
