Add extra chars indicator support

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -30,7 +30,7 @@ form {
         margin-top: 5px;
         border-radius: 3px;
         overflow: hidden;
-        .char_limit {
+        .extra_chars {
             position: absolute;
             right: 0;
             top: 0;
