--- a/src/html/include/form.njk
+++ b/src/html/include/form.njk
@@ -5,7 +5,7 @@
 {% if type == 'text' %}<div class="input_wrapper">{% endif %}
     <input id="input_{{ id }}" type="{{ type }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %} {% if maxlength %}data-maxlength="{{ maxlength }}"{% endif %}>
     {% if type == 'text' %}
-    <span id="input_{{ id }}_char_limit" class="char_limit"></span>
+    <span id="input_{{ id }}_extra_chars" class="extra_chars"></span>
     {% endif %}
 {% if type == 'text' %}</div>{% endif %}
 {% endmacro %}
@@ -16,7 +16,7 @@
 {% endif %}
 <div class="input_wrapper">
     <textarea id="input_{{ id }}" {% if placeholder %}placeholder="{{ placeholder }}"{% endif %}></textarea>
-    <span id="input_{{ id }}_char_limit" class="char_limit"></span>
+    <span id="input_{{ id }}_extra_chars" class="extra_chars"></span>
 </div>
 {% endmacro %}
 
