Remove obsolete select arrow css properties

--- a/src/css/components/select.scss
+++ b/src/css/components/select.scss
@@ -19,40 +19,11 @@
         > span {
             width: 100%;
         }
-
-        .arrow {
-            position: relative;
-            display: block;
-            height: 1rem;
-            aspect-ratio: 1;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transform: scale(0.7);
-
-            span {
-                position: absolute;
-                display: block;
-                background-color: #949aa4;
-                height: 2px;
-                width: 0.8rem;
-
-                &:nth-child(1) {
-                    transform: translateX(3.5px) rotateZ(-45deg);
-                    border-radius: 0 5px 5px 0;
-                }
-
-                &:nth-child(2) {
-                    transform: translateX(-3.5px) rotateZ(45deg);
-                    border-radius: 5px 0 0 5px;
-                }
-            }
-        }
     }
 
     &.open {
-        .view .arrow {
-            transform: rotateZ(180deg) scale(0.7);
+        .view {
+            display: none;
         }
     }
 
