--- a/src/css/components/select.scss
+++ b/src/css/components/select.scss
@@ -39,6 +39,8 @@
         flex-direction: column;
         top: 100%;
         width: 100%;
+        border-radius: 4px;
+        overflow: hidden;
 
         .cat {
             background: #202225;
