--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -58,6 +58,7 @@ form {
         &[type="color"] {
             margin-bottom: 18px;
             margin-top: 5px;
+            padding: 3px 10px;
         }
         :placeholder {
             color: rgb(182, 182, 182);
