--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed generator</title>
+
+    <meta property="og:image" content="resources/images/discord.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Generate your discord embed and export it in different languages!">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="Discord embed generator">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Discord-embed-generator">
+    <meta name="twitter:creator" content="@CVoidsplit">
+    <meta name="twitter:title" content="Discord embed generator">
+    <meta name="twitter:description" content="Generate your discord embed and export it in different languages!">
+    <meta name="twitter:image" content="resources/images/discord.jpg">
+
     <link rel="shortcut icon" href="resources/images/avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
     <link rel="stylesheet" href="dist/js/app.css">
