Fixing open graph images and description

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed generator</title>
 
-    <meta property="og:image" content="resources/images/discord.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/VoidSplit/Yet-Another-Discord-Embed-Generator/gh-pages/resources/images/discord.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Generate your discord embed and export it in different languages!">
+    <meta property="og:description" content="Design your discord embeds with markdown and variables and generate the code in Java JavaScript Python or Rust!">
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Discord embed generator">
 
@@ -16,8 +16,8 @@
     <meta name="twitter:site" content="@Discord-embed-generator">
     <meta name="twitter:creator" content="@CVoidsplit">
     <meta name="twitter:title" content="Discord embed generator">
-    <meta name="twitter:description" content="Generate your discord embed and export it in different languages!">
-    <meta name="twitter:image" content="resources/images/discord.jpg">
+    <meta name="twitter:description" content="Design your discord embeds with markdown and variables and generate the code in Java JavaScript Python or Rust!">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/VoidSplit/Yet-Another-Discord-Embed-Generator/gh-pages/resources/images/discord.jpg">
 
     <link rel="shortcut icon" href="resources/images/avatar.png" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
