fix open graph images

--- a/src/html/index.njk
+++ b/src/html/index.njk
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embed generator</title>
 
+    <meta itemprop="og:image" content="https://raw.githubusercontent.com/VoidSplit/Yet-Another-Discord-Embed-Generator/gh-pages/resources/images/discord.jpg">
+    <meta itemprop="og:name" content="Discord embed generator">
+
     <meta property="og:image" content="https://raw.githubusercontent.com/VoidSplit/Yet-Another-Discord-Embed-Generator/gh-pages/resources/images/discord.jpg">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Design your discord embeds with markdown and variables and generate the code in Java JavaScript Python or Rust!">
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Discord embed generator">
+    <meta property="og:site_name" content="Discord embed generator">
+    <meta property="og:url" content="/">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Discord-embed-generator">
